<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF3CD"
        android:text="@string/notice"
        android:textSize="14sp"
        android:textColor="#B00020"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:text="@string/prediction_will_appear_here"/>

    <TextView
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF3CD"
        android:textSize="14sp"
        android:textColor="#B00020"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/remember"/>

</LinearLayout>
