<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoritesFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="@android:color/darker_gray" />

    <com.example.myapplication.CameraOverlay
        android:id="@+id/cameraOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false" />

    <ImageButton
        android:id="@+id/btnFlash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flash_toggle"
        android:src="@drawable/ic_flash_on"
        app:tint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp" />

    <FrameLayout
        android:id="@+id/scanningTipsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/scanning_tips"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:clipToOutline="true"
        android:gravity="center"
        android:outlineProvider="background"
        app:layout_constraintTop_toBottomOf="@id/btnFlash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/scanningTipsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/scanningTipsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/scanningTipsIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_scantips" />

                <TextView
                    android:id="@+id/scanningTipsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Scanning Tips"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:paddingEnd="4dp"/>

                <ImageView
                    android:id="@+id/scanningTipsDropdown"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_arrow_down"
                    app:tint="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/scanningTipsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanning_tips"
                android:textColor="#BFFFFFFF"
                android:textSize="12sp"
                android:paddingTop="6dp"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>

    <ImageButton
        android:id="@+id/btnPickGallery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_gallery"
        android:scaleType="centerInside"
        android:contentDescription="@string/pick_from_gallery"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        android:background="@drawable/shutter_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    <ImageButton
        android:id="@+id/btnToggleCamera"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/transparent_circle"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera_switch"
        android:contentDescription="@string/toggle_camera"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
